# cuda-ptx-microbenchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RTX4070_CODE_REVIEW.md  RTX4070_IMPLEMENTATION_SUMMARY.md  TDD_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_CHECKLIST.md
.github/workflows/: ci.yml
docs/: CODE_REVIEW_GUIDELINE.md  COMMON_MISTAKES.md  NCU_TROUBLESHOOTING.md  PTX_QUICK_REFERENCE.md  REVIEW_CHECKLIST.md  TDD_WORKFLOW.md
experiments/matmul_ptx/: benchmark_matmul.py  matmul_ext.cpp  matmul_ext.py  matmul_kernel.cu  plot_pow2_sweep.py  profile_target.py  sweep_matmul_pow2.py  test_matmul_ptx.py
experiments/matmul_ptx/results/: bench_1024.json  bench_128.json  bench_2048.json  bench_256.json  bench_512.json  bench_bvec_1024.json  bench_bvec_2048.json  bench_bvec_final_1024.json  bench_bvec_final_2048.json  bench_bvec_stage3_1024.json  bench_bvec_stage3_2048.json  bench_cpasync128_2048.json  bench_cpasync128_4096.json  bench_cpasync128_resanity.json  bench_cpasync128_resanity_8192.json  bench_cpasync128_stage2_1024.json  bench_cpasync128_stage2_2048.json  bench_cpasync128_stage2_4096.json  bench_cpasync128_stage2_512.json  bench_cpasync128_stage2_8192.json  bench_dispatch2_1024.json  bench_dispatch2_512.json  bench_dispatch_1024.json  bench_dispatch_2048.json  bench_dispatch_512.json  bench_dispatch_order_4096.json  bench_dispatch_resanity.json  bench_events_1024.json  bench_events_2048.json  bench_events_512.json  bench_fastpath_1024.json  bench_fastpath_2048.json  bench_fastpath_512.json  bench_handwritten_hybrid_2048.json  bench_handwritten_hybrid_4096.json  bench_int32_1024.json  bench_int32_2048.json  bench_k32_1024.json  bench_k32_2048.json  bench_ldmatrix_1024.json  (+45 more)
experiments/transpose_ptx/: TRANSPOSE_REPORT.md  baseline_1024.json  baseline_2048.json  baseline_2048x8192.json  baseline_3000x5000.json  baseline_4096.json  baseline_8192.json  benchmark_transpose.py  nsys_opt.nsys-rep  nsys_opt.sqlite  nsys_pytorch.nsys-rep  nsys_pytorch.sqlite  profile_target.py  test_transpose_ptx.py  transpose_ext.cpp  transpose_ext.py  transpose_kernel.cu
include/core/: benchmark_runner.h  gpu_timer.h  result_collector.h
include/kernels/memory/: global_memory.h  l1_cache.h  l2_cache.h
include/kernels/ptx/: arithmetic.h  memory_ptx.h  synchronization.h  transpose.h
scripts/: check_coverage.sh  run_tests.sh  verify_ptx.sh
src/: main.cpp  transpose_benchmark.cu
src/core/: benchmark_runner.cpp  result_collector.cpp  timer.cpp
src/kernels/memory/: global_memory.cu  l1_cache.cu  l2_cache.cu
src/kernels/microbench/: ada_specific.cu  double_precision.cu  instruction_latency.cu  instruction_throughput.cu  integer_instructions.cu  l2_cache.cu  memory_bandwidth.cu  memory_latency.cu  shared_memory.cu  shared_memory_banks.cu  tensor_cores.cu
src/kernels/ptx/: arithmetic.cu  memory_ptx.cu  synchronization.cu  transpose.cu
tests/: CMakeLists.txt  CTestTestfile.cmake
tests/e2e/: test_full_benchmark_suite.cu  test_report_generation.cu
tests/fixtures/: benchmark_fixture.cpp  benchmark_fixture.h  gpu_test_fixture.cpp  gpu_test_fixture.h
tests/integration/: test_l1_cache.cu  test_l2_cache.cu  test_memory_bandwidth.cu  test_ptx_instructions.cu  test_transpose_ptx.cu
tests/microbench/: test_ada_specific.cu  test_double_precision.cu  test_instruction_latency.cu  test_instruction_throughput.cu  test_integer_instructions.cu  test_l2_cache.cu  test_memory_bandwidth.cu  test_memory_latency.cu  test_shared_memory.cu  test_shared_memory_banks.cu  test_tensor_cores.cu  test_warp_scheduler.cu
tests/unit/: test_ptx_assembler.cpp  test_result_collector.cpp  test_timer.cu
